--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-platform-searchbar": "^1.2.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.5.0",
     "react-native-vector-icons": "^9.2.0"
   },
